update tests and implementation to match java11 spec